# node-based-image-processor

Node-Based Image Manipulation Interface/: CMakeLists.txt  README.md
Node-Based Image Manipulation Interface/include/: BaseNode.h  BlendNode.h  BlurNode.h  BrightnessContrastNode.h  ColorChannelSplitterNode.h  ConvolutionFilterNode.h  EdgeDetectionNode.h  ImageInputNode.h  NoiseGenerationNode.h  OutputNode.h  ThresholdNode.h
Node-Based Image Manipulation Interface/src/: BlendNode.cpp  BlurNode.cpp  BrightnessContrastNode.cpp  ColorChannelSplitterNode.cpp  ConvolutionFilterNode.cpp  EdgeDetectionNode.cpp  ImageInputNode.cpp  NoiseGenerationNode.cpp  OutputNode.cpp  ThresholdNode.cpp  main.cpp
